--- a/src/css/style.css
+++ b/src/css/style.css
@@ -359,7 +359,7 @@ header {
     text-decoration: none;
 }
 
-.transacoes #button-esqu {
+.transacoes .button-esqu {
     width: 100%;
     height: 84px;
     background: rgba(93, 168, 105, 0.49);
@@ -371,6 +371,25 @@ header {
     background-color: #5DA869;
     border-radius: 50px;
     width: 100%;
+}
+
+.transacoes input[type='radio']{
+    display: none;
+}
+
+.transacoes .recorrencia label{
+    background-color: #5DA869;
+    border-radius: 50px;
+    width: 100%;
+    text-align: center;
+    cursor: pointer;
+}
+
+.transacoes .recorrencia input[type='radio']:checked + label{
+    background-color: #6dd67f;
+    border-radius: 50px;
+    width: 100%;
+    text-align: center;
 }
  
 .transacoes #btn-confirmar {
