--- a/src/css/style.css
+++ b/src/css/style.css
@@ -169,7 +169,7 @@ header {
     align-items: center;
 }
 
-#img-olho-fechado {
+#img-olho {
     width: 20px;
     height: 20px;
     cursor: pointer;
